--- a/client/src/pages/admin/seasons/SeasonFormModal.module.scss
+++ b/client/src/pages/admin/seasons/SeasonFormModal.module.scss
@@ -10,7 +10,7 @@
 .dateRow {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: $space-lg;
+  gap: $space-xl;
 }
 
 .formActions {
